Update content in index.html for improved clarity and consistency

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </p>
 
     <p>
-        Modern web frameworks can be bloated and complex. <span>We believe</span> plain HTML and JavaScript are more than capable of building great, modern web applications.
+        Modern web frameworks can be bloated and complex. <span>We believe</span> plain HTML and JavaScript are powerful enough to build fast, modern, full-featured web apps.
         <br>
         <br>
         So, we set out to create a complete backend solution that works seamlessly with pure HTML.
@@ -30,16 +30,13 @@
 
     <br>
 
-    <h3>Skapi: <span>Next-Gen Backend</span> <span>API Service</span></h3>
+    <h3>Skapi: <span>Zero-Setup Backend</span> <span>API Service</span></h3>
     <p>
-        Skapi is a powerful yet accessible backend API service that empowers anyone with basic HTML and JavaScript
-        knowledge to build full-fledged web applications—without the hassle of managing servers or databases.
+        Skapi is a fully serverless backend API that requires zero setup—enabling anyone with basic HTML and JavaScript skills to build full-featured web applications without the burden of managing servers or databases.
         <br><br>
-        With its fully serverless architecture, Skapi connects your client-side application directly to backend
-        resources, significantly reducing development time and costs.
+        By bundling essential backend services into a single JavaScript library, Skapi streamlines development and delivers everything you need instantly, with no configuration required.
         <br><br>
-        It's the ideal solution for developers and businesses of all sizes looking to focus on building great services,
-        not managing infrastructure.
+        It's the perfect solution for developers and teams of all sizes who want to spend more time building and less time managing infrastructure.
     </p>
 
     <p class="bold">
