Update ticket options and add new input field for owner in tickets.html and tickets.js

--- a/admin/tickets.html
+++ b/admin/tickets.html
@@ -26,7 +26,8 @@
     <li>2: Standard</li>
     <li>3: Premium</li>
     <li>50: Unlimited</li>
-    <li>51: Free Standard</li>
+    <li>51: Lifetime Standard</li>
+    <li>52: Lifetime Premium</li>
 </ul>
 </p>
 
@@ -45,6 +46,7 @@
                 </td>
                 <td>
                     <input type="text" id='serviceIdInput' name="service" required />
+                    <input type="text" name="owner" hidden value="skapi" />
                 </td>
             </tr>
             <tr>
