Refactor index.html for improved clarity and consistency by removing commented-out code and enhancing product descriptions.

--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
     </p>
 
     <p>
-        Modern web frameworks can be bloated and complex. <span>We believe</span> plain HTML and JavaScript are powerful enough to build fast, modern, full-featured web apps.
+        <!-- Modern web frameworks can be bloated and complex. <span>We believe</span> plain HTML and JavaScript are powerful enough to build fast, modern, full-featured web apps.
         <br>
-        <br>
-        So, we set out to create a complete backend solution that works seamlessly with pure HTML.
+        <br> -->
+        So, we set out to create a complete backend solution that works seamlessly with your HTML webpage.
     </p>
 
-    <br>
-
-    <h3>Skapi: <span>Zero-Setup Backend</span> <span>API Service</span></h3>
+    <h3>Skapi: <span>Zero-Setup Backend</span> <span>API</span></h3>
     <p>
-        Skapi is a fully serverless backend API that requires zero setup—enabling anyone with basic HTML and JavaScript skills to build full-featured web applications without the burden of managing servers or databases.
+        Skapi is a fully serverless backend API service that requires zero setup—enabling anyone with basic HTML and JavaScript skills to build full-featured web applications.
         <br><br>
         By bundling essential backend services into a single JavaScript library, Skapi streamlines development and delivers everything you need instantly, with no configuration required.
         <br><br>
