Add OpenID Loggers page and update navigation in index.html

--- a/admin/index.html
+++ b/admin/index.html
@@ -31,6 +31,9 @@
             <a href="/admin/tickets.html">Tickets</a>
         </li>
         <li>
+            <a href="/admin/register-logger.html">OpenID Loggers</a>
+        </li>
+        <li>
             <a href="/pp/skapi.html">Skapi Privacy Policy</a>
         </li>
         <li>
